Removed min-height to prevent stretching children

--- a/components/CardGrid/CardGrid.module.scss
+++ b/components/CardGrid/CardGrid.module.scss
@@ -4,7 +4,6 @@
   gap: 1rem;
   margin: 0;
   padding: 1rem;
-  min-height: 100%;
   background-color: var(--color-neutral-lighter);
 
   @media screen and (min-width: 400px) {
