--- a/components/TrackGrid/TrackGrid.module.scss
+++ b/components/TrackGrid/TrackGrid.module.scss
@@ -2,10 +2,8 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  box-sizing: border-box;
   margin: 0;
   padding: 1rem;
-  min-height: 100%;
   background-color: var(--color-neutral-lighter);
 
   @media screen and (min-width: 400px) {
